version 1.09.3, 2005-01-17:
===========================
* bug fixed in Date.to_business

version 1.09.2, 2004-12-15:
===========================
* bug fixed in Date.from_unixfloat and Date.from_unixtm with time zones <> UTC

version 1.09.1, 2004-11-17:
===========================
* bug fixed in Calendar.to/from_unixfloat with time zones <> UTC
* add @since in the API documentation
* META file is now writable

version 1.09.0, 2004-11-13:
===========================
* add Date.to_business and Date.from_business (Richard Jone's suggestion)
* add the optional parameter ?month to Date.days_in_year
	(Richard Jones' suggestion)
* add Date.nth_weekday_of_month (Richard Jones' suggestion)
* Date: add some Christian dates (Richard Jones' suggestion)
* add Date.Period.ymd and Calendar.Period.ymds
* Printer: add the format string %i corresponding to the ISO-8601 notation
* Printer: ISO-8601 notation is now the default format
* add [equal] in all the modules
* Calendar.Period: bug fixed with negative period
* bug fixed in Calendar.to/from_unixfloat and Date.to/from_unixfloat
* bug fixed in weeks_in_year

version 1.08, 2004-05-18:
=========================
* add [week_first_last] computing the first and last days of a week in a year

version 1.07, 2004-03-22:
=========================
* compile even if no ocaml native compiler is available
	(from a patch of Stefano Zacchiroli)
* documentation of the API with ocamldoc

version 1.06, 2003-12-05:
=========================
* compile with an optimized compiler (ocamlopt.opt or ocamlc.opt) if possible
* improved "make install"

version 1.05, 2003-09-18:
=========================
* add module Printer (from a suggestion of Stefano Zacchiroli)
* remove to_string and from_string from Date, Time and Calendar
(replaced by functions of Printer)
* Str library is no longer necessary
* add labelled version of make in Date, Time and Calendar

version 1.04, 2003-08-31:
=========================