@@ -1,3 +1,6 @@
+* add Time_Zone.is_dst and Time_Zone.hour_of_dst (from suggestion of D. Peng)
+* bug fixed when checking bounds in Time_Zone (patch of Daniel Peng)
+
 version 1.09.3, 2005-01-17:
 ===========================
 * bug fixed in Date.to_business
